Add default functions.

--- a/FrameworkExpresiones/TemplateTest/template2.html
+++ b/FrameworkExpresiones/TemplateTest/template2.html
@@ -1,3 +1,3 @@
-﻿<h3>{{ nombre }}</h3>
-<b>{{ precio | currency }}</b>
-<p>{{ fechaVencimiento | toDateStr }}</p>
+﻿<h3>{{ nombre | toUpperCase }}</h3>
+<b>{{ precio | toCurrency }}</b>
+<p>{{ fechaVencimiento | toDateString }}</p>
